--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
         "sort-packages": true
     },
     "require": {
-        "php": "7.4.0",
+        "php": "^7.4",
         "psr/http-factory": "^1.0",
         "psr/http-message": "^1.0",
         "psr/http-server-handler": "^1.0",
