--- a/composer.json
+++ b/composer.json
@@ -24,15 +24,15 @@
         "sort-packages": true
     },
     "require": {
-        "php": "^7.4",
+        "php": ">=7.4",
         "psr/http-factory": "^1.0",
         "psr/http-message": "^1.0",
         "psr/http-server-handler": "^1.0",
         "psr/http-server-middleware": "^1.0"
     },
     "require-dev": {
-        "eloquent/phony-kahlan": "^2.0",
-        "kahlan/kahlan": "^4.5",
+        "eloquent/phony-kahlan": "^4.0",
+        "kahlan/kahlan": "^5.0",
         "phpstan/phpstan": "^0.12.3"
     },
     "autoload": {
